--- a/examples/iOS/FilterShowcase/FilterShowcaseSwift/Info.plist
+++ b/examples/iOS/FilterShowcase/FilterShowcaseSwift/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Camera image processing</string>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
