--- a/examples/iOS/FilterShowcase/FilterShowcaseSwift/Info.plist
+++ b/examples/iOS/FilterShowcase/FilterShowcaseSwift/Info.plist
@@ -23,6 +23,8 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
+	<string>Camera image processing</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
