--- a/examples/iOS/FilterShowcase/FilterShowcaseSwift/Info.plist
+++ b/examples/iOS/FilterShowcase/FilterShowcaseSwift/Info.plist
@@ -24,6 +24,8 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>wangchao</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
